--- a/trunk/Obi/Obi/Dialogs/AutoPageGeneration.fr.resx
+++ b/trunk/Obi/Obi/Dialogs/AutoPageGeneration.fr.resx
@@ -125,10 +125,10 @@
     <value>&amp;Écarts dans pages (mins):</value>
   </data>
   <data name="m_lbStartingSectionIndex.Size" type="System.Drawing.Size, System.Drawing">
-    <value>132, 13</value>
+    <value>133, 13</value>
   </data>
   <data name="m_lbStartingSectionIndex.Text" xml:space="preserve">
-    <value>&amp;index de début de section:</value>
+    <value>&amp;Index de début de section:</value>
   </data>
   <data name="m_cbStartingSectionIndex.Location" type="System.Drawing.Point, System.Drawing">
     <value>157, 101</value>
