--- a/trunk/Obi/Obi/ObiForm.de.resx
+++ b/trunk/Obi/Obi/ObiForm.de.resx
@@ -443,7 +443,7 @@
     <value>272, 22</value>
   </data>
   <data name="mFocusOnTOCViewToolStripMenuItem.Text" xml:space="preserve">
-    <value>&amp;Fokus Inhaltsverzeichnis &lt;&gt; Inhalt</value>
+    <value>&amp;Fokus Inhaltsverzeichnis  Inhalt</value>
   </data>
   <data name="mFocusOnStripsViewToolStripMenuItem.AccessibleName" xml:space="preserve">
     <value>Fokus auf Inhalt F6</value>
@@ -1801,5 +1801,9 @@
         AAAAAAAAAAAAAAAAAAAAAAAAAAAAAP//43uAHwAAgA/WAIAPIjGAByIggANjb4ABbmeAA1VUgA84IoAP
         CjyAD09DwA9QRcAfbGngHyBQ8H9MSf//Ii0=
 </value>
+  </data>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="$this.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>Inherit</value>
   </data>
 </root>
